--- a/syltourist.html
+++ b/syltourist.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hackthon</title>
+	<title>Sylhet Tourisim</title>
 	<script src="https://www.gstatic.com/firebasejs/4.1.5/firebase.js"></script>	
 	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
@@ -12,9 +12,9 @@
 	<form id="homePageData">
 		<label>Name</label><br/>
 		<input type="text" name="placeName" id="placeName"><br/>
-		<label>Lat</label><br/>
+		<label>Latitude</label><br/>
 		<input type="text" name="lat" id="lat"><br/>
-		<label>Lang</label><br/>
+		<label>Longitude</label><br/>
 		<input type="text" name="lang" id="lang"><br/>
 		<label>Description</label><br/>
 		<textarea id="description"></textarea><br/>
